removed trailing comma in package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/natac13/eslint-config-natac13#readme",
   "devDependencies": {
-    "eslint": "2.6.0",
+    "eslint": "2.6.0"
   },
   "dependencies": {
     "babel-eslint": "6.0.2",
